# 759-proj

./: CMakeLists.txt  README.md  discretize_geom.cpp
notes/: call_tree.txt  mem_reqs.txt
src/: discretize.cpp  discretize.cu  discretize.h  discretize.hu
tests/: 1x1x1Voxels.h5m
